# frogwatch

./: .gitignore  .pylintrc  CLAUDE.md  Procfile  README.md  export_duckdb.py  frogwatch.py  psql-notes.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.ipynb_checkpoints/: Frogwatch Development-checkpoint.ipynb  Frogwatch v2-checkpoint.ipynb  Frogwatch v3-checkpoint.ipynb
dashboard/: data.py  main.py
frogwatch/: db_postgres.py  db_sqlite.py  fieldscope.py  frogwatch.py  models.py  version.py
notebooks/: Frogwatch Development.ipynb  Frogwatch Workbook.ipynb  Frogwatch v2.ipynb  Frogwatch v3.ipynb  frogwatch_v3.py  frogwatch_v4.py
src/dashboard/: data.py  db_postgres.py  db_sqlite.py  frogwatch.db  main.py  sample_main.py
src/frogwatch/: db_postgres.py  frogwatch.py  load_labels.py  models.py
