[project]
name = "frogwatch"
version = "0.5.0"
description = "Provide local analysis of Frogwatch data from Fieldscope"
authors = [{ name = "Tom Pollard", email = "pollard@alum.mit.edu" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "attrs",
    "bokeh",
    "ConfigArgParse",
    "ipywidgets",
    "jupyter",
    "jupyterlab-widgets",
    "numpy",
    "pandas",
    "psycopg2-binary",
    "requests",
    "jsonpath_rw",
    "sqlalchemy>=2.0.48",
    "marimo",
    "altair",
    "anthropic>=0.84.0",
    "pydantic-ai-slim>=0.8.1",
]

[project.optional-dependencies]
dev = [
    "pyright",
    "pylint",
    "pytest",
    "black",
]

[project.scripts]
frogwatch = "frogwatch.frogwatch:main"

[build-system]
requires = ["uv_build>=0.6,<1"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "duckdb>=1.4.4",
    "openai>=2.26.0",
    "polars[pyarrow]>=1.36.1",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server>=1.14.0",
    "sqlglot>=29.0.1",
    "websockets>=15.0.1",
]
